# sigscan

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/sigscan/: sigscan.hpp
src/: main.cpp  sigscan.cpp
tests/: test_sigscan.cpp
